# windows-deps

./: .gitignore  .travis.yml  BuildAll.bat  CleanAll.bat  PackageAll.bat  README.md  travis-ci-build.sh
src/SeExpr/: CMakeLists.txt
src/SeExpr/src/SeExprEditor/: CMakeLists.txt  SeExprEdBrowser.cpp  SeExprEdBrowser.h  SeExprEdColorCurve.cpp  SeExprEdColorCurve.h  SeExprEdCompletionModel.cpp  SeExprEdCompletionModel.h  SeExprEdControl.cpp  SeExprEdControl.h  SeExprEdControlCollection.cpp  SeExprEdControlCollection.h  SeExprEdCurve.cpp  SeExprEdCurve.h  SeExprEdDialog.cpp  SeExprEdDialog.h  SeExprEdFileDialog.cpp  SeExprEdFileDialog.h  SeExprEdGrapher2d.cpp  SeExprEdGrapher2d.h  SeExprEdHighlighter.h  SeExprEdPopupDocumentation.cpp  SeExprEdPopupDocumentation.h  SeExprEdShortEdit.cpp  SeExprEdShortEdit.h  SeExprEditor.cpp  SeExprEditor.h  SeExprSpecType.h  SeExpressionEditor.cpp
src/SeExpr/src/SeExprEditor/CE/: CECurveListUI.cpp  CECurveListUI.h  CEGraphUI.cpp  CEMainUI.cpp  CEMainUI.h  CESegEditUI.cpp  CESegEditUI.h  CETool.h  test.cpp
src/SeExpr/src/demos/: CMakeLists.txt
src/SeExpr/src/demos/imageEditor/: CMakeLists.txt  ImageEditorDialog.h  imageEditor.cpp
src/SeExpr/src/demos/imageSynth/: imageSynth.cpp
src/SeExpr/src/demos/segraph/: CMakeLists.txt  Graph.h  GraphWindow.cpp  GraphWindow.h  segraph.cpp
src/SeExpr/src/doc/: uitutorial.txt
src/alembic/: CMakeLists.txt
src/embree/kernels/: config.h  hash.h
src/libjpeg-turbo/: CMakeLists.txt
src/libtiff/: .gitignore  nmake-debug.opt  nmake-release.opt
src/llvm/tools/cfe/lib/Basic/: Version.cpp
src/llvm/tools/cfe/www/: cxx_dr_status.html
src/ocio/: CMakeLists.txt
src/ocio/export/OpenColorIO/: OpenColorABI.h.in
src/ocio/src/aftereffects/vc/vc9/: OpenColorIO.vcproj
src/ocio/src/aftereffects/vc/vc9/ext/: glew.vcproj  lcms.vcproj  tinyxml.vcproj  yaml.vcproj
src/ocio/src/apps/share/: argparse.cpp
src/ocio/src/core/: CMakeLists.txt
src/oiio/: CMakeLists.txt
src/oiio/src/cmake/: externalpackages.cmake
src/oiio/src/idiff/: idiff.cpp
src/oiio/src/include/OpenImageIO/: simd.h
src/oiio/src/libOpenImageIO/: deepdata.cpp
src/oiio/src/libutil/: fmath_test.cpp  strutil.cpp
src/oiio/src/oiiotool/: oiiotool.cpp
src/osl/: CMakeLists.txt
src/osl/src/cmake/: oiio.cmake
src/osl/src/cmake/modules/: FindLLVM.cmake
src/osl/src/include/OSL/: dual.h
src/osl/src/liboslexec/: constfold.cpp  llvm_ops.cpp  oslexec_pvt.h
src/osl/src/oslinfo/: CMakeLists.txt
src/osl/src/shaders/MaterialX/: mx_image.mx  mx_ln.mx
src/xerces-c/Projects/Win32/VC10/xerces-all/XercesLib/: XercesLib.vcxproj
src/xerces-c/Projects/Win32/VC11.appleseed/xerces-all/CreateDOMDocument/: CreateDOMDocument.vcxproj
src/xerces-c/Projects/Win32/VC11.appleseed/xerces-all/DOMCount/: DOMCount.vcxproj
src/xerces-c/Projects/Win32/VC11.appleseed/xerces-all/DOMMemTest/: DOMMemTest.vcxproj
src/xerces-c/Projects/Win32/VC11.appleseed/xerces-all/DOMNormalizerTest/: DOMNormalizerTest.vcxproj
src/xerces-c/Projects/Win32/VC11.appleseed/xerces-all/DOMPrint/: DOMPrint.vcxproj
src/xerces-c/Projects/Win32/VC11.appleseed/xerces-all/DOMTest/: DOMTest.vcxproj
src/xerces-c/Projects/Win32/VC11.appleseed/xerces-all/DOMTraversalTest/: DOMTraversalTest.vcxproj
src/xerces-c/Projects/Win32/VC11.appleseed/xerces-all/DOMTypeInfoTest/: DOMTypeInfoTest.vcxproj
src/xerces-c/Projects/Win32/VC11.appleseed/xerces-all/EncodingTest/: EncodingTest.vcxproj
src/xerces-c/Projects/Win32/VC11.appleseed/xerces-all/EnumVal/: EnumVal.vcxproj
src/xerces-c/Projects/Win32/VC11.appleseed/xerces-all/InitTermTest/: InitTermTest.vcxproj
src/xerces-c/Projects/Win32/VC11.appleseed/xerces-all/MemHandlerTest/: MemHandlerTest.vcxproj
src/xerces-c/Projects/Win32/VC11.appleseed/xerces-all/MemParse/: MemParse.vcxproj
src/xerces-c/Projects/Win32/VC11.appleseed/xerces-all/PParse/: PParse.vcxproj
src/xerces-c/Projects/Win32/VC11.appleseed/xerces-all/PSVIWriter/: PSVIWriter.vcxproj
src/xerces-c/Projects/Win32/VC11.appleseed/xerces-all/RangeTest/: RangeTest.vcxproj
src/xerces-c/Projects/Win32/VC11.appleseed/xerces-all/Redirect/: Redirect.vcxproj
src/xerces-c/Projects/Win32/VC11.appleseed/xerces-all/SAX2Count/: SAX2Count.vcxproj
src/xerces-c/Projects/Win32/VC11.appleseed/xerces-all/SAX2Print/: SAX2Print.vcxproj
src/xerces-c/Projects/Win32/VC11.appleseed/xerces-all/SAXCount/: SAXCount.vcxproj
src/xerces-c/Projects/Win32/VC9/xerces-all/: xerces-all.sln
src/xerces-c/src/xercesc/parsers/: SAX2XMLReaderImpl.cpp  SAXParser.cpp  XercesDOMParser.cpp
src/xerces-c/src/xercesc/sax/: SAXParseException.cpp  SAXParseException.hpp
tools/: devenv-wrapper.bat
tools/patch/: README.txt
(+78 files in other folders)
